// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValuePair alpha - renders correctly 1`] = `
<div
  className="px-key-value-pair"
>
  <div
    className="kvp-label ctwgUQ"
    size={null}
  >
    Lorem Ipsum
  </div>
  <span
    className="alpha kfFMcF"
    size="delta"
  >
    12345
    <span
      className="delta eHtIjR"
      size="delta"
    >
      units
    </span>
  </span>
</div>
`;

exports[`KeyValuePair beta - renders correctly 1`] = `
<div
  className="px-key-value-pair"
>
  <div
    className="kvp-label ctwgUQ"
    size={null}
  >
    Lorem Ipsum
  </div>
  <span
    className="beta dEiQCL"
    size="epsilon"
  >
    12345
    <span
      className="epsilon bYwwOz"
      size="epsilon"
    >
      units
    </span>
  </span>
</div>
`;
